# rational-ai

./: .gitignore  README.md  _add_diagrams.py  _show_tables.py  _test_run.py  info.txt  pyproject.toml
.github/: copilot-instructions.md
.rai/: config.yaml  project.yaml
.rai/exports/: shopai-e-commerce-platform-report.html  shopai-e-commerce-platform-report.md
.rai/exports/diagrams/: DIA-001-component.mmd  DIA-002-sequence.mmd  DIA-003-deployment.mmd  DIA-004-flowchart.mmd  DIA-005-er.mmd  diagrams.html
docs/: architecture.md
examples/sample_project/: project.yaml
gui/: __init__.py  app.py  components.py  pages.py  theme.py
rational_ai/: __init__.py  cli.py  config.py  project.py
rational_ai/ai/: agents.py  prompts.py  providers.py
rational_ai/exporters/: html.py  markdown.py  mermaid.py
rational_ai/models/: schema.py
rational_ai/phases/: architecture.py  deployment.py  development.py  requirements.py  roles.py  scheduling.py
rational_ai/utils/: files.py
templates/: project.yaml
tests/: conftest.py  test_e2e_callbacks.py  test_e2e_pages.py  test_e2e_workflows.py
