[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rational-ai"
version = "0.1.0"
description = "AI-powered software engineering lifecycle platform inspired by IBM Rational Rose"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "httpx>=0.27",
    "dash>=2.14",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
rai = "rational_ai.cli:app"
rai-gui = "gui.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"
